--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "prettier": "^3.2.5",
