--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
