--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@vercel/analytics": "^1.2.2",
     "firebase": "^10.12.2",
     "next": "14.1.0",
