--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3",
     "typescript": "^5"
   }
 }
