--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@sentry/nextjs": "^8.25.0",
     "@vercel/analytics": "^1.2.2",
     "firebase": "^10.12.2",
     "next": "14.1.0",
