--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start -H 0.0.0.0",
     "lint": "next lint",
     "prettier": "prettier --write .",
+    "prettier:check": "prettier --check .",
     "test": "jest"
   },
   "dependencies": {
